name:                tsuru
version:             0.1.0
synopsis:            tsuru sample
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable Main
  main-is: Main.hs
  other-modules: Market Arg
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , transformers >= 0.4.2
                 , directory >= 1.2 
                 , bytestring >= 0.10
                 , pcap >= 0.4
                 , unix-time >= 0.3.5
                 , cmdargs >= 0.1
  ghc-options: -O2
  default-language: Haskell2010
