name:                asyncex-example
version:             0.1.0
synopsis:            Examples to accompany the book "Parallel and Concurrent Programming in Haskell"
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Simon Marlow
maintainer:          Simon Marlow <marlowsd@gmail.com>
copyright:           (c) Simon Marlow 2011-2013
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
-- conc-asyncex

executable  geturlscancel
  main-is: geturlscancel.hs
  other-modules: TimeIt GetURL
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , network >= 2.3 && < 2.5
                 , HTTP ==4000.2.*
  default-language: Haskell2010

executable  geturlscancel2
  main-is: geturlscancel2.hs
  other-modules: TimeIt GetURL
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , network >= 2.3 && < 2.5
                 , HTTP ==4000.2.*
  default-language: Haskell2010

executable  modifytwo
  main-is: modifytwo.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  chan3
  main-is: chan3.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  timeout
  main-is: timeout.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  catch-mask
  main-is: catch-mask.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  catch-mask2
  main-is: catch-mask2.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010
