name:                debugging-tuning
version:             0.3.4
synopsis:            Examples to accompany the book "Parallel and Concurrent Programming in Haskell"
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Simon Marlow
maintainer:          Simon Marlow <marlowsd@gmail.com>
copyright:           (c) Simon Marlow 2011-2013
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
-- conc-debugging-tuning

executable  mvar4
  main-is: mvar4.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  deadlock1
  main-is: deadlock1.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  deadlock2
  main-is: deadlock2.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  threadperf1
  main-is: threadperf1.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  threadperf2
  main-is: threadperf2.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -rtsopts
  default-language: Haskell2010

-- -----------------------------------------------------------------------------
-- Extras (exercises etc.)

executable  bingtranslator
  main-is: bingtranslator.hs
  other-modules: BingTranslate GetURL
  hs-source-dirs: other .
  build-depends:   base >= 4.5 && < 4.8
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , HTTP ==4000.2.*
                 , network >= 2.3 && < 2.5
                 , utf8-string ==0.3.*
                 , xml ==1.3.*
  default-language: Haskell2010

executable  bingtranslatorconc
  main-is: bingtranslatorconc.hs
  other-modules: BingTranslate GetURL
  hs-source-dirs: other .
  build-depends:   base >= 4.5 && < 4.8
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , HTTP ==4000.2.*
                 , network >= 2.3 && < 2.5
                 , utf8-string ==0.3.*
                 , xml ==1.3.*
  default-language: Haskell2010

executable  geturlsstm
  main-is: geturlsstm.hs
  other-modules: TimeIt GetURL
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , network >= 2.3 && < 2.5
                 , HTTP ==4000.2.*
  default-language: Haskell2010

executable  Async
  main-is: Async.hs
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
  default-language: Haskell2010
