name:                fork-example
version:             0.1.0
synopsis:            Examples to accompany the book "Parallel and Concurrent Programming in Haskell"
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Simon Marlow
maintainer:          Simon Marlow <marlowsd@gmail.com>
copyright:           (c) Simon Marlow 2011-2013
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
-- conc-fork

executable  fork
  main-is: fork.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  reminders
  main-is: reminders.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

executable  reminders2
  main-is: reminders2.hs
  build-depends:   base >= 4.5 && < 4.8
  default-language: Haskell2010

