name:                higher-example-example
version:             0.1.0
synopsis:            Examples to accompany the book "Parallel and Concurrent Programming in Haskell"
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Simon Marlow
maintainer:          Simon Marlow <marlowsd@gmail.com>
copyright:           (c) Simon Marlow 2011-2013
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
-- conc-higher

executable  geturls7
  main-is: geturls7.hs
  other-modules: ConcurrentUtils
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , network >= 2.3 && < 2.5
                 , HTTP ==4000.2.*
  default-language: Haskell2010

executable  geturls8
  main-is: geturls8.hs
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , network >= 2.3 && < 2.5
                 , HTTP ==4000.2.*
  default-language: Haskell2010

executable  geturls9
  main-is: geturls9.hs
  build-depends:   base >= 4.5 && < 4.8
                 , stm ==2.4.*
                 , bytestring >= 0.9 && < 0.11
                 , time ==1.4.*
                 , network >= 2.3 && < 2.5
                 , HTTP ==4000.2.*
  default-language: Haskell2010

executable  timeout2
  main-is: timeout.hs
  build-depends:   base >= 4.5 && < 4.8
                 , async ==2.0.*
  default-language: Haskell2010


